--- a/email-backend/requirements.txt
+++ b/email-backend/requirements.txt
@@ -1,8 +1,10 @@
 blinker==1.9.0
 cachetools==5.5.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
+cryptography==43.0.3
 dnspython==2.7.0
 Flask==3.0.3
 google-api-core==2.23.0
@@ -22,6 +24,8 @@ proto-plus==1.25.0
 protobuf==5.28.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+pycparser==2.22
+PyJWT==2.9.0
 pymongo==4.10.1
 pyparsing==3.2.0
 python-dotenv==1.0.1
